[package]
name = "quinn-reverse-proxy"
version = "0.1.0"
authors = ["Colin Moore <camoore7@ncsu.edu>"]
edition = "2018"
default-run="quinn-reverse-proxy"

[dependencies]
anyhow = "1.0.22"
quinn = "0.5.3"
quinn-proto = "0.5.2"
httparse = "1.3.4"
http = "0.2"
hyper = "0.13.1"
hyper-tls = "0.4.0"
futures = "0.3.1"
tokio = "0.2.6"
tokio-current-thread = "0.1"
async-trait = "0.1.21"
bytebuffer = "0.2.1"
rand = "0.7"
log = "0.4.8"
simple_logger = "1.3.0"
tracing = "0.1.10"
tracing-subscriber = "0.1.5"
tracing-futures = { version = "0.1.0", default-features = false, features = ["std-future"] }
err-derive = "0.1"
structopt = "0.3"
rcgen = "0.7"
directories = "2.0"
failure = "0.1"

[[bin]]
name="generate-cert"
path="src/bin/generate_cert.rs"